--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-teacher",
+  "name": "rcode",
   "version": "1.0.0",
   "description": "javascript learning website",
   "main": "index.js",
